bk_ida/gccida/c0/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2361:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note *note_kind; // [rsp+A8h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2371:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)insn[2]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2382:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_outputs = recog_data_0.n_operands - n_inputs; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2385:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2387:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 63 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2388:35: error: use of undeclared identifier 'recog_data_0'
&& ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i]->fld[0].rtwint == 61 ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2390:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_loc[i] = ( rtx *)recog_data_0.operand[i]->fld; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2390:39: error: use of undeclared identifier 'recog_data_0'
recog_data_0.operand_loc[i] = ( rtx *)recog_data_0.operand[i]->fld; 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2391:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = recog_data_0.operand[i]->fld[0].rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2391:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = recog_data_0.operand[i]->fld[0].rtx; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2395:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = insna[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                     ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2399:25: error: expected expression
note_kind = ( reg_note *)( ( char *)v6 - ( ( 4LL * i + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2399:15: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
note_kind = ( reg_note *)( ( char *)v6 - ( ( 4LL * i + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
              ^~~~~~~~
              reg_names
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/hard-reg-set.h:485:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2401:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = insna[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                     ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2448:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 61 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2449:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint >= 8u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2450:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint <= 0xFu 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2454:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
regno = get_hard_regnum( &temp_stack, recog_data_0.operand[i]); 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/reg-stack.c:2457:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( regno != recog_data_0.operand[i]->fld[0].rtint ) 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
